--- a/blazeapp/templates/home.html
+++ b/blazeapp/templates/home.html
@@ -15,12 +15,13 @@
       
       <script>
             var mymap = L.map('mapid').setView([51.505, -0.09], 13);
-          L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
-              attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-              maxZoom: 18,
-              id: 'your.mapbox.project.id',
-              accessToken: 'your.mapbox.public.access.token'
-          }).addTo(mymap);
+            L.tileLayer('https://{s}.tiles.mapbox.com/v4/{mapId}/{z}/{x}/{y}.png?access_token={token}', {
+              attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors,
+              <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+              subdomains: ['a','b','c','d'],
+              mapId: 'myMapId',
+              token: 'myUserToken'
+          });
       </script>
   </body>
 </html>
