--- a/blazeapp/templates/home.html
+++ b/blazeapp/templates/home.html
@@ -7,21 +7,17 @@
     <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   </head>
   <style type="text/css">
-      #mapid { height: 180px; }
+      #map { 
+            margin: auto;
+            box-shadow: 10px 10px 5px #888888;
+            width:95%;
+            height:400px;
+      }
+      
   </style>
   <body>
-      <p>Blazeapp</p>
-      <div id="mapid"></div>
-      
-      <script>
-            var mymap = L.map('mapid').setView([51.505, -0.09], 13);
-            L.tileLayer('https://{s}.tiles.mapbox.com/v4/{mapId}/{z}/{x}/{y}.png?access_token={token}', {
-              attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors,
-              <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-              subdomains: ['a','b','c','d'],
-              mapId: 'myMapId',
-              token: 'myUserToken'
-          });
-      </script>
+      <h1>Blazeapp</h1>
+      <iframe id ="map" src="mapping.html">
+      </iframe>
   </body>
 </html>
