--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,6 +1,6 @@
 body{
 	color:#6a6f8c;
-	background:url(../images/ff.jpg) no-repeat center;
+	background-color: #1a1a1a;
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
 *,:after,:before{box-sizing:border-box}
@@ -14,14 +14,14 @@ a{color:inherit;text-decoration:none}
 	max-width:525px;
 	min-height:670px;
 	position:relative;
-	box-shadow:0 12px 15px 0 rgba(0,0,0,50),0 17px 50px 0 rgba(255,255,0,0.3);
+	box-shadow:0 12px 15px 0 rgba(0,0,0,50),0 17px 50px 0 rgba(255,0,0,0.3);
 }
 .login-html{
 	width:100%;
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background:rgba(255,0,0,.6);
+	background:rgba(0,0,0,.6);
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -58,7 +58,7 @@ a{color:inherit;text-decoration:none}
 .login-html .sign-in:checked + .tab,
 .login-html .sign-up:checked + .tab{
 	color:#fff;
-	border-color:#1161ee;
+	border-color:red;
 }
 .login-form{
 	min-height:345px;
@@ -72,7 +72,12 @@ a{color:inherit;text-decoration:none}
 	margin-bottom:15px;
 }
 .login-form .group .label,
-.login-form .group .input,
+.login-form .group .input{
+	width:100%;
+	color:#000;
+	display:block;
+}
+
 .login-form .group .button{
 	width:100%;
 	color:#fff;
@@ -83,7 +88,7 @@ a{color:inherit;text-decoration:none}
 	border:none;
 	padding:15px 20px;
 	border-radius:25px;
-	background:rgba(255,0,0,0.9);
+	background:rgba(0,0,0.9);
 }
 .login-form .group input[data-type="password"]{
 	text-security:circle;
@@ -94,7 +99,7 @@ a{color:inherit;text-decoration:none}
 	font-size:12px;
 }
 .login-form .group .button{
-	background:#1161ee;
+	background: red;
 }
 .login-form .group label .icon{
 	width:15px;
@@ -102,7 +107,7 @@ a{color:inherit;text-decoration:none}
 	border-radius:2px;
 	position:relative;
 	display:inline-block;
-	background:rgba(255,255,255,.1);
+	background:rgba(255,255,255,0);
 }
 .login-form .group label .icon:before,
 .login-form .group label .icon:after{
@@ -131,7 +136,7 @@ a{color:inherit;text-decoration:none}
 	color:#fff;
 }
 .login-form .group .check:checked + label .icon{
-	background:#1161ee;
+	background:red;
 }
 .login-form .group .check:checked + label .icon:before{
 	-webkit-transform:scale(1) rotate(45deg);
