--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>App title here</title></title>
-
+    <!-- custom -->
+    <link href= "/static/css/style.css" rel = "stylesheet>"
+    
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
