--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,15 @@
- {% include "base.html" %}
+ {% extends "base.html" %}
  
- {% block main %}
+{% block main %}
+
+ <style type="text/css">
+   #map{
+    width: 100%;
+    height: 400px;
+   }
+ </style>
  
- <iframe id ="map" src="mapping.html">
-      </iframe>
+ <iframe id ="map" src="{{ iframe }}">
+ </iframe>
       
 {% endblock %}
