--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,9 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>App title here</title></title>
     <!-- custom -->
+    <link href= "/static/css/login.css" rel = "stylesheet">
     <link href= "/static/css/style.css" rel = "stylesheet>"
+    
     
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -61,6 +63,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/login.js"></script>
     {% block js %} {% endblock%}
   </body>
 </html>
