--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,16 +1,12 @@
  {% extends "base.html" %}
- 
 {% block main %}
-
- <style type="text/css">
-   #map{
-    width: 100%;
-    height: 600px;
-   }
+    <style type="text/css">
+     #map{
+         width:100%;
+         height: 600px;
+     }
  </style>
- 
- <iframe id ="map" src= "{{ url_for('m') }}">
- </iframe>
- <input type="submit" name="submit" value="Show Hydrants">
- <input type="submit" name="submit" value="Show Stations">  
+
+      <iframe id ="map" src="{{ url_for('view_stations') }}" id="map">
+      </iframe>
 {% endblock %}
