--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,5 @@
  {% extends "base.html" %}
 {% block main %}
-    <style type="text/css">
-     #map{
-         width:100%;
-         height: 600px;
-     }
- </style>
-
-      <iframe id ="map" src="{{ url_for('view_stations') }}" id="map">
-      </iframe>
+<h1>Nothing here, Jim</h1>
+<a href = "{{ url_for('show_map') }}"><button>Show Map</button></a>
 {% endblock %}
