--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>App title here</title></title>
+    <title>Blaze Alert</title></title>
     <!-- custom -->
+    <link rel="shortcut icon" href="/static/images/blazeapp.png" />
     <link href= "/static/css/login.css" rel = "stylesheet">
     <link href= "/static/css/style.css" rel = "stylesheet>"
     
